Correction of @use model name spacing

--- a/Sass/Utils/_mixins.scss
+++ b/Sass/Utils/_mixins.scss
@@ -1,9 +1,10 @@
 // -----------------------------------------------------------------------------
 // This file contains all application-wide Sass mixins.
 // -----------------------------------------------------------------------------
+@use '../Utils/fonts';
 
 @mixin font-design ($type) {
-  $palette: map-get($font-palette, $type);
+  $palette: map-get(fonts.$font-palette, $type);
   font-size: map-get($palette, fs);
   font-weight: map-get($palette, fw);
   color: map-get($palette, cl);
